# ClownScript

./: CMakeLists.txt  WithOpenSSL_CMakeLists.txt
Docs/: Basic_Documentation0.txt  Development_Stages.txt  GDB_DWARF.txt  GDB_Templeate.txt  Generics.txt  HWT_Document.txt  How_to_add_GDB.txt  Idea_Behind_The_Lexer.txt  Operators_c.txt  Parse_Method.txt  Stages.tree  notes.txt  print2.clown  roead_map.txt  update.clown
Docs/Extention/: build.sh  clownscript-0.0.1.vsix  extension.ts  language-configuration.json  package-lock.json  package.json  tsconfig.json
Docs/Extention/syntaxes/: backup_clownscript.tmLanguage.json  clownscript.tmLanguage.json
Docs/Extention/themes/: custom-clownscript-theme.json
include/Lexer/: Convert.hpp  Is.hpp  Keywords.hpp  Node.hpp  NodeType.hpp  Token.hpp  TokenType.hpp  Tokenizer.hpp
include/QuickTools/Console/: Console.hpp
src/Init/: main.cpp
src/Lexer/: HandleComments.cpp  HandleKeywordOrIdentyfier.cpp  HandlePragma.cpp  HandleStringLiteral.cpp  HandleSymbol.cpp  Is.cpp  Tokenize.cpp  Tokenizer.cpp  Tokenizer_Constructors.cpp
src/QuickTools/Console/: Console.cpp
